# air-fried-gyatt

./: Cargo.toml  README.md
circuit-checker/: Cargo.toml  lib.rs
gyatt-fryer-cli/: Cargo.toml
gyatt-fryer-cli/src/: main.rs
mini_circuit/: Nargo.toml  Prover.toml
mini_circuit/src/: complex.nr  main.nr
prover/: Cargo.toml
scripts/: update-noir.sh
smoke-stack/: Cargo.toml
smoke-stack/src/: main.rs
src/: lib.rs
src/circuit_checker/: mod.rs
