[workspace]
name = "vape"
version = "0.1.0"
edition = "2021"
resolver = "2"
members = [
    "circuit-checker",
    "smoke-stack"
]
debug-assertions = true

[workspace.dependencies.acir]
git = "https://github.com/philogy/noir-snapshot"
features = ["baby_bear"]
rev = "6827c34"

[workspace.dependencies.nargo]
git = "https://github.com/philogy/noir-snapshot"
rev = "6827c34"
