[package]
name = "circuit-checker"
version = "0.1.0"
edition = "2021"

[lib]
name = "circuit_checker"
path = "lib.rs"

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
    "nightly-features",
] }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = "0.8.5"
serde = "1.0.202"
serde_json = "1.0.117"
serde_bytes = "0.11.14"
