[package]
name = "smoke-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.acir]
git = "https://github.com/philogy/noir-snapshot"
features = ["baby_bear"]
rev = "35cf340"

[dependencies.nargo]
git = "https://github.com/philogy/noir-snapshot"
rev = "35cf340"
