[package]
name = "smoke-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.117"
circuit-checker = { path = "../circuit-checker" }

[dependencies.acir]
git = "https://github.com/philogy/noir-snapshot"
features = ["baby_bear"]
rev = "6827c34"

[dependencies.nargo]
git = "https://github.com/philogy/noir-snapshot"
rev = "6827c34"
